# pydantic-iati

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  models.py  mypy.ini  pyproject.toml  techstack.md  techstack.yml  tox.ini
.github/workflows/: python-app.yml
activity/: models.py
codelists/: models.py
data/sample/: 111111_publisher-activities.xml  activity-standard-example-annotated-canon.xml  activity-standard-example-annotated-out.xml  activity-standard-example-annotated.xml  datasets.json
data/sample/iatidatastore.iatistandard.org/api/datasets/: root.json
organisation/: models.py
pydanticiati/: Untitled.ipynb  base_models.py
pydanticiati/activity/: models.py
pydanticiati/codelists/: models.py
pydanticiati/data/sample/: ActivityScope.xml  datasets.json
pydanticiati/data/sample/iatidatastore.iatistandard.org/api/datasets/: root.json
pydanticiati/data/sample/iatiregistry.org/action/: package_search.json
pydanticiati/organisation/: models.py
pydanticiati/registry/: models.py  packagemodels.py
pydanticiati/templates/: codelist.ts.j2
pydanticiati/test_results/: activity-standard-example-annotated-out.xml
pydanticiati/tests/: test_activity.py  test_async_publisher.py  test_codelist.py  test_organisation.py  test_package_search.py  test_publisher.py
registry/: models.py
requirements/: base.in  base.txt  dev.in  dev.txt  jupyterlab.in  jupyterlab.txt  pipcompilewrapper.sh  test.in  test.txt
tests/: test_activity.py  test_codelist.py  test_organisation.py  test_publisher.py
